fix: layout issues in mobile resolution

--- a/src/apps/copilots/src/pages/copilot-opportunity-details/apply-opportunity-modal/styles.module.scss
+++ b/src/apps/copilots/src/pages/copilot-opportunity-details/apply-opportunity-modal/styles.module.scss
@@ -4,4 +4,12 @@
   .info {
     margin-bottom: 12px;
   }
+
+  &:global(.react-responsive-modal-modal) {
+    :global(.modal-body) {
+        @include ltemd {
+            height: 100%;
+        }
+    }
+}
 }
